...
            "state" : "translated",
            "value" : "键盘布局"
          }
        }
      }
    },
    "demo.liveRoom.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "غرفة البث"
...
            "state" : "translated",
            "value" : "星河绮梦"
          }
        }
      }
    },
    "liveRoom.gift.item.heart" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "قلب"
...
